Fri Nov 13 13:05:37 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* prelude.rb (Thread.exclusive): warn as deprecated.

Fri Nov 13 10:36:39 2015  Victor Nawothnig  <Victor.Nawothnig@gmail.com>

	* parse.y (new_unless): optimize constant condition for `unless`
	  as well as `if`.  [Fix GH-1092]

Fri Nov 13 10:08:41 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/psych/psych.gemspec: bump version to 2.0.15

Thu Nov 12 18:44:26 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_magic_comment): should match exactly.
	  [ruby-core:71460] [Bug #11679]

Thu Nov 12 16:16:20 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* template/prelude.c.tmpl: enable tail call optimization.

Thu Nov 12 14:17:01 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): ANDDOT at the head of the line denote
	  line continuation from previous one to support fluent interface,
	  as well as single dot.

Thu Nov 12 13:49:50 2015  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* lib/rubygems: Update to RubyGems 2.5.0+ HEAD(db78980).
	  this version includes #1367 , #1373 , #1375
	* test/rubygems: ditto.

Thu Nov 12 10:53:41 2015  Eric Wong  <e@80x24.org>

	* benchmark/bm_io_nonblock_noex2.rb: new benchmark based
	  on bm_io_nonblock_noex.rb
	* io.c (io_read_nonblock): move documentation to prelude.rb
	  (io_write_nonblock): ditto
	  (Init_io): private, internal methods for prelude.rb use only
	* prelude.rb (IO#read_nonblock): wrapper + documentation
	  (IO#write_nonblock): ditto
	  [ruby-core:71439] [Feature #11339]

Wed Nov 11 18:30:28 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): look up the key, then get default
	  value and raise KeyError if the returned value is nil.
	  [ruby-dev:49338] [Ruby trunk - Bug #11677]

Wed Nov 11 17:38:24 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (local_var_list_add): skip internal local variable
	  name by its type but not if it has a name.  internal local